[gd_scene load_steps=7 format=3 uid="uid://cckiwwd1v4p6"]

[ext_resource type="Script" uid="uid://yhypo8iixmlw" path="res://Scripts/Entities/character_drag.gd" id="1_awcum"]
[ext_resource type="Script" uid="uid://dkm0wegb4ukog" path="res://Scripts/Utilities/navigation_path_line.gd" id="2_daq0a"]
[ext_resource type="Shader" uid="uid://nq2bayapq6vb" path="res://Shaders/raycast_selection_view.gdshader" id="2_jfcyq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yahk"]
size = Vector2(125, 131)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j5dbt"]
resource_local_to_scene = true
shader = ExtResource("2_jfcyq")
shader_parameter/frequency = 0.3
shader_parameter/amplitude = 1000.0
shader_parameter/speed = 5.0
shader_parameter/direction = -1.0
shader_parameter/color1 = Color(1, 1, 1, 1)
shader_parameter/color2 = Color(0, 0, 0, 0.2)
shader_parameter/opacity = 0.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jfcyq"]
shader = ExtResource("2_jfcyq")
shader_parameter/frequency = 0.5
shader_parameter/amplitude = 1000.0
shader_parameter/speed = 3.0
shader_parameter/direction = 1.0
shader_parameter/color1 = Color(1, 0, 0, 1)
shader_parameter/color2 = Color(0, 0, 0, 0)
shader_parameter/opacity = 0.8

[node name="CharacterDrag" type="Node2D" node_paths=PackedStringArray("_handle")]
script = ExtResource("1_awcum")
_handle = NodePath("Handle")

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_0yahk")
debug_color = Color(0.112024, 0.545085, 0.209384, 0.42)

[node name="Handle" type="Sprite2D" parent="."]
z_index = 100

[node name="NavigationPathLine" type="Line2D" parent="."]
material = SubResource("ShaderMaterial_j5dbt")
width = 5.0
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("2_daq0a")
tail_uses_own_material_instance = true
tail_material_override = SubResource("ShaderMaterial_jfcyq")

[connection signal="started_dragging" from="." to="NavigationPathLine" method="_on_character_drag_started_dragging"]
[connection signal="stopped_dragging" from="." to="NavigationPathLine" method="_on_character_drag_stopped_dragging"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
